reforma pagina producto

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -52,34 +52,34 @@
 
     <main>
         <h1 class="centrar_texto">Productos</h1>
-        <section>
+        <section class="container row ">
 
-            <div>
+            <div class="col-md-4 col-sm-6 ">
                 <img src="../images/imagen-nutricion.webp" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 </img>
             </div>
-            <div>
+            <div class="col-md-4 col-sm-6 ">
                 <img src="../images/imagen-nutricion.webp" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 </img>
             </div>
-            <div>
+            <div class="col-md-4 col-sm-6 ">
                 <img src="../images/imagen-nutricion.webp" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 </img>
             </div>
-            <div>
+            <div class="col-md-4 col-sm-6 ">
                 <img src="../images/imagen-nutricion.webp" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 </img>
             </div>
-            <div>
+            <div class="col-md-4 col-sm-6 ">
                 <img src="../images/imagen-nutricion.webp" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 </img>
             </div>
-            <div>
+            <div class="col-md-4 col-sm-6 ">
                 <img src="../images/imagen-nutricion.webp" alt="">
                 <p>Lorem ipsum dolor sit.</p>
                 </img>
