aplique flex a recetas

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -51,25 +51,46 @@
 
     </header>
 
-    <main>
-        <h1 class="centrar_texto">Recetas para aprovechar al máximo nuestros productos</h1>
-        <section>
-            <div>
+    <main class="main_recetas">
+        <h1>Recetas para aprovechar al máximo nuestros productos</h1>
+        <section class="section_recetas">
+            <div class="div_imagen_recetas">
                 <img src="../images/receta-1.jpg" alt="">
                     <p>Wok de verduras</p>
                 </img>
             </div>
-            <div>
+            <div class="div_imagen_recetas">
                 <img src="../images/receta-2.jpg" alt="">
                     <p>Fideos con brócoli y pollo</p>
                 </img>
             </div>
-            <div>
+            <div class="div_imagen_recetas">
                 <img src="../images/receta-3.jpg" alt="">
                     <p>Legumbres con tomates secos</p>
                 </img>
             </div>
-            <div>
+            <div class="div_imagen_recetas">
+                <img src="../images/receta-4.jpg" alt="">
+                    <p>Arroz con pollo con verdeo</p>
+                </img>
+            </div>
+
+            <div class="div_imagen_recetas">
+                <img src="../images/receta-4.jpg" alt="">
+                    <p>Arroz con pollo con verdeo</p>
+                </img>
+            </div>
+            <div class="div_imagen_recetas">
+                <img src="../images/receta-4.jpg" alt="">
+                    <p>Arroz con pollo con verdeo</p>
+                </img>
+            </div>
+            <div class="div_imagen_recetas">
+                <img src="../images/receta-4.jpg" alt="">
+                    <p>Arroz con pollo con verdeo</p>
+                </img>
+            </div>
+            <div class="div_imagen_recetas">
                 <img src="../images/receta-4.jpg" alt="">
                     <p>Arroz con pollo con verdeo</p>
                 </img>
