--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,11 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../images/logo rincon sano.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo-rincon-sano.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="../css/estilos.css">
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+    
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Productos Rincon Sano</title>
 </head>
 <body>
@@ -91,7 +93,12 @@
     </main>
 
     <footer>
-        <p>Copyright Derechos reservados 2018</p>
+        <p class="centrar_texto">Copyright Derechos reservados 2018</p>
+        <div class="redes">
+            <a href=""><i class="bi bi-twitter"></i></a>
+            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="bi bi-instagram"></i></a>
+            <a href=""><i class="bi bi-whatsapp"></i></a>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
