aplique sass y variables

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -71,6 +71,9 @@
                         <img src="../images/img-mostrador.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
+                        <img src="../images/cartel-rinconsano.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
                         <img src="../images/localreal-gondola.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
@@ -98,9 +101,9 @@
     <footer>
         <p class="centrar_texto">Copyright Derechos reservados 2018</p>
         <div class="redes">
-            <a href=""><i class="bi bi-twitter"></i></a>
-            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-whatsapp"></i></a>
+            <a href=""><i class="red--twitter bi bi-twitter"></i></a>
+            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="red--instagram bi bi-instagram"></i></a>
+            <a href=""><i class="red--whatsapp bi bi-whatsapp"></i></a>
         </div>
     </footer>
 
