--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="section_main">
         
             <div>
-                <img class="img_inicio" src="./images/familia-los5.jpg" alt="">
+                <img class="img_inicio" src="./images/imagen-caraduenos1.png" alt="">
             </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea eaque autem quas repellat beatae dolorem doloribus. Animi commodi dolores consequatur saepe ullam! Beatae hic molestias modi provident corporis, reiciendis delectus, voluptate expedita suscipit vel quia voluptates officiis nam minima magni.
             </p>
@@ -69,9 +69,9 @@
     <footer>
         <p class="centrar_texto">Copyright Derechos reservados 2018</p>
         <div class="redes">
-            <a href=""><i class="bi bi-twitter"></i></a>
-            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-whatsapp"></i></a>
+            <a href=""><i class="red--twitter bi bi-twitter"></i></a>
+            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="red--instagram bi bi-instagram"></i></a>
+            <a href=""><i class="red--whatsapp bi bi-whatsapp"></i></a>
         </div>
     </footer>
 
