--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -59,7 +59,7 @@
         <section class="section_contacto">
             
             <div class="contenedor_de_imagen">
-                <img src="../images/imagen-caraduenos1.png" alt="">
+                <img src="../images/cartel-rinconsano.jpg" alt="">
             </div>
             
             <form class="formulario" action="">
@@ -91,9 +91,9 @@
     <footer>
         <p class="centrar_texto">Copyright Derechos reservados 2018</p>
         <div class="redes">
-            <a href=""><i class="bi bi-twitter"></i></a>
-            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-whatsapp"></i></a>
+            <a href=""><i class="red--twitter bi bi-twitter"></i></a>
+            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="red--instagram bi bi-instagram"></i></a>
+            <a href=""><i class="red--whatsapp bi bi-whatsapp"></i></a>
         </div>
     </footer>
 
