--- a/pages/productos.html
+++ b/pages/productos.html
@@ -95,9 +95,9 @@
     <footer>
         <p class="centrar_texto">Copyright Derechos reservados 2018</p>
         <div class="redes">
-            <a href=""><i class="bi bi-twitter"></i></a>
-            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-whatsapp"></i></a>
+            <a href=""><i class="red--twitter bi bi-twitter"></i></a>
+            <a target="_blank" href="https://www.instagram.com/rincon_sano_/"><i class="red--instagram bi bi-instagram"></i></a>
+            <a href=""><i class="red--whatsapp bi bi-whatsapp"></i></a>
         </div>
     </footer>
 
