textos reales y seo

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Almacen natural rincon sano, un negocio familiar , atendido por sus propios dueños , situado en alberti , partido de bragado">
+    
+    <meta name="keywords" content="almacen, dietetica, comidasana, alimentacion, recetas, productos">
+
         <!-- Fuente importada -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +47,7 @@
                             <a class="nav-link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./recetas.html">Recetas</a>
+                            <a class="nav-link active" href="./recetas.html">Recetas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -58,44 +62,143 @@
         <h1 class="centrar_texto">Recetas para aprovechar al máximo nuestros productos</h1>
         <section class="section_recetas">
             <div class="div_imagen_recetas">
-                <img src="../images/receta-1.jpg" alt="">
-                    <p>Wok de verduras</p>
+                <img src="../images/albondigas-veganas-img.png" alt="">
+                <h4>
+                    Albondigas veganas
+                </h4>
+                <ol class="lista_receta">
+                    <li>1 Taza de soja texturizada</li>
+                    <li>1 Taza de lentejas cocidas</li>
+                    <li>2 Dientes de ajo</li>
+                    <li>1 Taza de agua</li>
+                    <li>1 Caldo de verduras</li>
+                    <li>1 Cucharada de perjil</li>
+                    <li>1 Cucharada de ajo en polvo</li>
+                    <li>1 Cucharada de cebolla en polvo</li>
+                    <li>2 Cucharadas de harina</li>
+                    <li>Sal y aceite</li>
+                </ol>
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/receta-2.jpg" alt="">
-                    <p>Fideos con brócoli y pollo</p>
+                <img src="../images/barra-cereal-img.png" alt="">
+                <h4>
+                    Barra de cereal
+                </h4>
+                <ol class="lista_receta">
+                    <li>3 Tazas de té de avena tradicional (300 g)</li>
+                    <li>1 Taza de frutas secas, almendras y nueces</li>
+                    <li>4 cucharadas de semillas de lino, sésamo y/o chía</li>
+                    <li>3/4 Taza de copoz de maíz sin azúcar (30 g)</li>
+                    <li>1 Taza de maní tostado sin sal</li>
+                    <li>1 Huevo</li>
+                    <li>10 Sobres de edulcorante apto stevia, o sucralosa, o 1/2 taza de miel </li>
+                    <li>1 Taza de pasas de uva o dátiles hidratados y picados</li>
+                </ol>
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/receta-3.jpg" alt="">
-                    <p>Legumbres con tomates secos</p>
+                <img src="../images/budin-mandarina-sinazucar-img.png" alt="">
+                <h4>
+                    Budin de mandarina sin azucar
+                </h4>
+                <ol class="lista_receta">
+                    <li>1 Mandarina</li>
+                    <li>Aceite 40cc</li>
+                    <li>Edulcorante 20cc</li>
+                    <li>Leche 80cc</li>
+                    <li>Harina integral 150 grs</li>
+                    <li>Avena 50 grs</li>
+                    <li>Claras de huevo 50grs</li>
+                    <li>Escencia de vainilla (1cucharadita)</li>
+                </ol>
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/receta-4.jpg" alt="">
-                    <p>Arroz con pollo con verdeo</p>
+                <img src="../images/guiso-garbanzos-img.png" alt="">
+                <h4>
+                    Guiso de garbanzos
+                </h4>
+                <ol class="lista_receta">
+                    <li>1 Tomate rallado</li>
+                    <li>1 Pimentón rojo pequeño cortado en cubitos finos</li>
+                    <li>1/2 Cabeza de ajo limpia y picada</li>
+                    <li>2 Hojas de laurel</li>
+                    <li>1 Cucharada de orégano seco</li>
+                    <li>1 Cucharada de comino</li>
+                    <li>1 Cucharada de pimentón en polvo</li>
+                    <li>A gusto sal y pimienta</li>
+                </ol>
                 </img>
             </div>
 
             <div class="div_imagen_recetas">
-                <img src="../images/receta-4.jpg" alt="">
-                    <p>Arroz con pollo con verdeo</p>
+                <img src="../images/muffins-avena-img.png" alt="">
+                <h4>
+                    Muffins de avena
+                </h4>
+                <ol class="lista_receta">
+                    <li>180 Grs de avena en copos</li>
+                    <li>2 Cucharadas de harina integral</li>
+                    <li>50 Gr de azúcar negra</li>
+                    <li>2 Huevos</li>
+                    <li>100 Gr de manteca</li>
+                    <li>1 Limón verde</li>
+                    <li>30 Gr de nueces trituradas</li>
+                    <li>1/2 Cucharada de sal</li>
+                </ol>
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/receta-4.jpg" alt="">
-                    <p>Arroz con pollo con verdeo</p>
+                <img src="../images/pan-dulce-img.png" alt="">
+                <h4>
+                    Pan dulce en 4 pasos
+                </h4>
+                <ol class="lista_receta">
+                    <li>2 Cucharadas de harina</li>
+                    <li>1 Cucharada de azúcar</li>
+                    <li>1 Chorrito de leche tibia</li>
+                    <li>30 Gr de levadura fresca</li>
+                    <li>50 Gr de manteca</li>
+                    <li>1 Cucharadita de escencia de vainilla</li>
+                    <li>2 Huevos</li>
+                </ol>
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/receta-4.jpg" alt="">
-                    <p>Arroz con pollo con verdeo</p>
+                <img src="../images/turron-avena-img.png" alt="">
+                <h4>
+                    Turrón de avena
+                </h4>
+                <ol class="lista_receta">
+                    <li>6 Cucharadas de avena</li>
+                    <li>3  Cucharadas de cacao en polvo</li>
+                    <li>50 Gr de manteca</li>
+                    <li>1 Paquete de galletitas de agua</li>
+                    <li>1/2 Taza de leche</li>
+                    <li>2 Barrita de chocolate</li>
+                    <li>Chocolate cobertura</li>
+                </ol>
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/receta-4.jpg" alt="">
-                    <p>Arroz con pollo con verdeo</p>
+                <img src="../images/wrap-pollo-hoja-lechuga-img.png" alt="">
+                <h4>
+                    Wrap de pollo en hoja de lechuga
+                </h4>
+                <ol class="lista_receta">
+                    <li>1 Cucharada de aceite de oliva</li>
+                    <li>1 Pechuga de pollo (cortada en cubitos )</li>
+                    <li>2 Dientes de ajo picados</li>
+                    <li>1 Cebolla picada</li>
+                    <li>2 Cucharadas de salsa de soja</li>
+                    <li>1 Cucharada de vinagre de vino de arroz (de no tener, azucar)</li>
+                    <li>1 Cucharada de jengibre rallado</li>
+                    <li>250 gr de maní pelado</li>
+                    <li>2 Cebollas de verdeo</li>
+                    <li>Sal y pimienta a gusto</li>
+                    <li>1 Planta de lechuga mantecosa</li>
+                </ol>
                 </img>
             </div>
         </section>
