--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Almacen natural rincon sano, un negocio familiar , atendido por sus propios dueños , situado en alberti , partido de bragado">
+    
+    <meta name="keywords" content="almacen, dietetica, comidasana, alimentacion, recetas, productos">
+
         <!-- Fuente importada -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" href="../images/logo-rincon-sano.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
@@ -45,7 +49,7 @@
                             <a class="nav-link" href="./recetas.html">Recetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">Contacto</a>
+                            <a class="nav-link active" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
