--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Almacen natural rincon sano, un negocio familiar , atendido por sus propios dueños , situado en alberti , partido de bragado">
+    
+    <meta name="keywords" content="almacen, dietetica, comidasana, alimentacion, recetas, productos">
+
         <!-- Fuente importada -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +40,7 @@
                             <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./galeria.html">Galeria</a>
+                            <a class="nav-link active" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./productos.html">Productos</a>
