--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Almacen natural rincon sano, un negocio familiar , atendido por sus propios dueños , situado en alberti , partido de bragado">
+    
+    <meta name="keywords" content="almacen, dietetica, comidasana, alimentacion, recetas, productos">
+
         <!-- Fuente importada -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,7 +43,7 @@
                             <a class="nav-link" href="./galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./productos.html">Productos</a>
+                            <a class="nav-link active" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./recetas.html">Recetas</a>
@@ -58,33 +62,33 @@
         <section class="container row ">
 
             <div class="col-md-4 col-sm-6 ">
-                <img src="../images/imagen-nutricion.webp" alt="">
-                <p>Lorem ipsum dolor sit.</p>
+                <img src="../images/granola-img.png" alt="">
+                <p>Las preferidas "GRANOLA"</p>
                 </img>
             </div>
             <div class="col-md-4 col-sm-6 ">
-                <img src="../images/imagen-nutricion.webp" alt="">
-                <p>Lorem ipsum dolor sit.</p>
+                <img src="../images/garbanzo-img.png" alt="">
+                <p>"GARBANZO"</p>
                 </img>
             </div>
             <div class="col-md-4 col-sm-6 ">
-                <img src="../images/imagen-nutricion.webp" alt="">
-                <p>Lorem ipsum dolor sit.</p>
+                <img src="../images/harina-almendras-img.png" alt="">
+                <p>"HARINA DE ALMENDRAS"</p>
                 </img>
             </div>
             <div class="col-md-4 col-sm-6 ">
-                <img src="../images/imagen-nutricion.webp" alt="">
-                <p>Lorem ipsum dolor sit.</p>
+                <img src="../images/lentejas-img.png" alt="">
+                <p>"LENTEJAS"</p>
                 </img>
             </div>
             <div class="col-md-4 col-sm-6 ">
-                <img src="../images/imagen-nutricion.webp" alt="">
-                <p>Lorem ipsum dolor sit.</p>
+                <img src="../images/semilla-amapola-img.png" alt="">
+                <p>"SEMILLAS DE AMAPOLA"</p>
                 </img>
             </div>
             <div class="col-md-4 col-sm-6 ">
-                <img src="../images/imagen-nutricion.webp" alt="">
-                <p>Lorem ipsum dolor sit.</p>
+                <img src="../images/semilla-chia-img.png" alt="">
+                <p>"SEMILLAS DE CHÍA"</p>
                 </img>
             </div>
         
