textos e imagenes reales

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div>
                 <img class="img_inicio" src="./images/imagen-caraduenos1.png" alt="">
             </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea eaque autem quas repellat beatae dolorem doloribus. Animi commodi dolores consequatur saepe ullam! Beatae hic molestias modi provident corporis, reiciendis delectus, voluptate expedita suscipit vel quia voluptates officiis nam minima magni.
+            <p>Somos Liliana y Carlos, nos encontramos en la localidad de alberti, desde hace 6 años creamos este emprendimiento, con la finalidad de brindar bienestar y productos de calidad a la población y expandirnos. En nuestro locar encontraran los mejores productos y la mejor atención.Te invitamos a conocer nuestro local
             </p>
         </section>
     </main>
