alt completados mas mejora diseño

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="section_main">
         
             <div>
-                <img class="img_inicio" src="./images/imagen-caraduenos1.png" alt="">
+                <img class="img_inicio" src="./images/imagen-caraduenos1.png" alt="dueños">
             </div>
             <p>Somos Liliana y Carlos, nos encontramos en la localidad de alberti, desde hace 6 años creamos este emprendimiento, con la finalidad de brindar bienestar y productos de calidad a la población y expandirnos. En nuestro locar encontraran los mejores productos y la mejor atención.Te invitamos a conocer nuestro local
             </p>
