--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -62,11 +62,11 @@
         <h1 class="centrar_texto">Recetas para aprovechar al máximo nuestros productos</h1>
         <section class="section_recetas">
             <div class="div_imagen_recetas">
-                <img src="../images/albondigas-veganas-img.png" alt="">
+                <img src="../images/albondigas-veganas-img.png" alt="albondigas veganas">
                 <h4>
                     Albondigas veganas
                 </h4>
-                <ol class="lista_receta">
+                <ol class="lista_receta">Ingredientes : 
                     <li>1 Taza de soja texturizada</li>
                     <li>1 Taza de lentejas cocidas</li>
                     <li>2 Dientes de ajo</li>
@@ -81,11 +81,11 @@
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/barra-cereal-img.png" alt="">
+                <img src="../images/barra-cereal-img.png" alt="barra energetica">
                 <h4>
                     Barra de cereal
                 </h4>
-                <ol class="lista_receta">
+                <ol class="lista_receta">Ingredientes :
                     <li>3 Tazas de té de avena tradicional (300 g)</li>
                     <li>1 Taza de frutas secas, almendras y nueces</li>
                     <li>4 cucharadas de semillas de lino, sésamo y/o chía</li>
@@ -98,11 +98,11 @@
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/budin-mandarina-sinazucar-img.png" alt="">
+                <img src="../images/budin-mandarina-sinazucar-img.png" alt="budin de mandarina">
                 <h4>
                     Budin de mandarina sin azucar
                 </h4>
-                <ol class="lista_receta">
+                <ol class="lista_receta">Ingredientes :
                     <li>1 Mandarina</li>
                     <li>Aceite 40cc</li>
                     <li>Edulcorante 20cc</li>
@@ -115,11 +115,11 @@
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/guiso-garbanzos-img.png" alt="">
+                <img src="../images/guiso-garbanzos-img.png" alt="guiso de garbanzos">
                 <h4>
                     Guiso de garbanzos
                 </h4>
-                <ol class="lista_receta">
+                <ol class="lista_receta">Ingredientes :
                     <li>1 Tomate rallado</li>
                     <li>1 Pimentón rojo pequeño cortado en cubitos finos</li>
                     <li>1/2 Cabeza de ajo limpia y picada</li>
@@ -133,11 +133,11 @@
             </div>
 
             <div class="div_imagen_recetas">
-                <img src="../images/muffins-avena-img.png" alt="">
+                <img src="../images/muffins-avena-img.png" alt="muffins de avena">
                 <h4>
                     Muffins de avena
                 </h4>
-                <ol class="lista_receta">
+                <ol class="lista_receta">Ingredientes :
                     <li>180 Grs de avena en copos</li>
                     <li>2 Cucharadas de harina integral</li>
                     <li>50 Gr de azúcar negra</li>
@@ -150,11 +150,11 @@
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/pan-dulce-img.png" alt="">
+                <img src="../images/pan-dulce-img.png" alt="pan dulce">
                 <h4>
                     Pan dulce en 4 pasos
                 </h4>
-                <ol class="lista_receta">
+                <ol class="lista_receta">Ingredientes :
                     <li>2 Cucharadas de harina</li>
                     <li>1 Cucharada de azúcar</li>
                     <li>1 Chorrito de leche tibia</li>
@@ -166,11 +166,11 @@
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/turron-avena-img.png" alt="">
+                <img src="../images/turron-avena-img.png" alt="turron de avena">
                 <h4>
                     Turrón de avena
                 </h4>
-                <ol class="lista_receta">
+                <ol class="lista_receta">Ingredientes :
                     <li>6 Cucharadas de avena</li>
                     <li>3  Cucharadas de cacao en polvo</li>
                     <li>50 Gr de manteca</li>
@@ -182,11 +182,11 @@
                 </img>
             </div>
             <div class="div_imagen_recetas">
-                <img src="../images/wrap-pollo-hoja-lechuga-img.png" alt="">
+                <img src="../images/wrap-pollo-hoja-lechuga-img.png" alt="wrap de pollo">
                 <h4>
                     Wrap de pollo en hoja de lechuga
                 </h4>
-                <ol class="lista_receta">
+                <ol class="lista_receta">Ingredientes :
                     <li>1 Cucharada de aceite de oliva</li>
                     <li>1 Pechuga de pollo (cortada en cubitos )</li>
                     <li>2 Dientes de ajo picados</li>
