--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
         <!-- Fuente importada -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link rel="shortcut icon" href="./images/logo-rincon-sano.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="./css/styles.css">
@@ -58,8 +61,8 @@
     </header>
 
     <main class="main_inicio">
-        <h1 class="centrar_texto">Quienes somos</h1>
-        <section class="section_main">
+        <h1 class="centrar_texto animate__animated animate__bounceInDown">Quienes somos</h1>
+        <section class="section_main animate__animated animate__fadeInLeftBig">
         
             <div>
                 <img class="img_inicio" src="./images/imagen-caraduenos1.png" alt="dueños">
