--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <link rel="stylesheet" href="../css/styles.css">
     <title>Galeria Rincon Sano</title>
 </head>
@@ -58,9 +60,9 @@
     </header>
 
     <main class="main_galeria">
-        <h1 class="centrar_texto">Conoce nuestro local</h1>
+        <h1 class="centrar_texto animate__animated animate__bounceInDown">Conoce nuestro local</h1>
         
-        <section class="section_galeria">
+        <section class="section_galeria animate__animated animate__fadeInLeftBig">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 
                 <div class="carousel-inner">
