--- a/pages/productos.html
+++ b/pages/productos.html
@@ -17,6 +17,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     
     <link rel="stylesheet" href="../css/styles.css">
     <title>Productos Rincon Sano</title>
@@ -58,8 +60,8 @@
     </header>
 
     <main>
-        <h1 class="centrar_texto">Productos</h1>
-        <section class="container row ">
+        <h1 class="centrar_texto animate__animated animate__bounceInDown">Productos</h1>
+        <section class="container row animate__animated animate__fadeInLeftBig">
 
             <div class="col-md-4 col-sm-6 ">
                 <img src="../images/granola-img.png" alt="granola">
