--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <link rel="stylesheet" href="../css/styles.css">
     
     <title>Recetas Rincon Sano</title>
@@ -59,8 +61,8 @@
     </header>
 
     <main class="main_recetas">
-        <h1 class="centrar_texto">Recetas para aprovechar al máximo nuestros productos</h1>
-        <section class="section_recetas">
+        <h1 class="centrar_texto animate__animated animate__bounceInDown">Recetas para aprovechar al máximo nuestros productos</h1>
+        <section class="section_recetas animate__animated animate__fadeInLeftBig">
             <div class="div_imagen_recetas">
                 <img src="../images/albondigas-veganas-img.png" alt="albondigas veganas">
                 <h4>
