--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
             <div>
                 <img class="img_inicio" src="./images/imagen-caraduenos1.png" alt="dueños">
             </div>
-            <p>Somos Liliana y Carlos, nos encontramos en la localidad de alberti, desde hace 6 años creamos este emprendimiento, con la finalidad de brindar bienestar y productos de calidad a la población y expandirnos. En nuestro locar encontraran los mejores productos y la mejor atención.Te invitamos a conocer nuestro local
+            <p class="parrafo_inicio">Somos Liliana y Carlos, nos encontramos en la localidad de alberti, desde hace 6 años creamos este emprendimiento, con la finalidad de brindar bienestar y productos de calidad a la población y expandirnos. En nuestro locar encontraran los mejores productos y la mejor atención.Te invitamos a conocer nuestro local
             </p>
+            <div class="div_iframe">
+                <p class="parrafo_iframe">Encontranos aca</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15652.997867416683!2d-60.28978940390278!3d-35.032637868250845!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bec1af274455fd%3A0xbc390504c8520ee1!2sRincon%20Sano!5e0!3m2!1ses-419!2sar!4v1687824575153!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
     </main>
 
